My first commit - please open the ecomdemo folder to run build

--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -11,7 +11,7 @@
       <body>  
  
 
-<!------About Section------->
+<!------This section details information about the company and is also called History------->
 	<section id="about">
 		<div class="container">
 			<div class="row">
@@ -64,6 +64,7 @@
 	</section>
 
 			<!------Services Section------->
+			<!------The section also denotes the service promise - Please update content regularly ------->
 			<section id="services">
 
 				<div class="container">
