--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -21,6 +21,9 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="shortcut icon" href="../images/logo-icon.png" />
 </head> *@
+			<!------The Shopping Cart Section------->
+			<!------The section enables the user to update, delete, empty and continue shopping ------->
+			<!------The jquery.store.js file allows the shopping cart to have functionality - this file is in the wwwroot js folder ------->
 <body>
 <div id="site">
 			<header id="masthead">
@@ -76,24 +79,5 @@
 
 
 </body>
-					@* <p id="sub-total">
-						<strong>Sub Total</strong>: <span id="stotal"></span>
-					</p>
-					<ul id="shopping-cart-actions">
-						<!-- <li>
-						<input type="submit" name="update" id="update-cart" class="btn" value="Update Cart" />
-					</li>
-					<li>
-						<input type="submit" name="delete" id="empty-cart" class="btn" value="Empty Cart" />
-					</li> -->
-						<li>
-							<a href="Product.html" class="btn" style="background-color:#fc41e3">Continue Shopping</a>
-						</li>
-						<li>
-							<a href="checkout.html" class="btn" style="background-color:#fc41e3">Go To Checkout</a>
-						</li>
-					</ul>
-				</form>
-			</div> *@
 
 
