--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -7,7 +7,7 @@
     
 </div>
 <body>
-
+<!------Contact details including social media details and contact form for customer to submit ------->
  <section id="contact">
 
             <div class="container">
