--- a/Views/Home/Error.cshtml
+++ b/Views/Home/Error.cshtml
@@ -2,5 +2,6 @@
     ViewData["Title"] = "Error";
 }
 <h1>@ViewData["Title"]</h1>
+<!------An error page if any unexpected error occurs ------->
 
 <p>Please enter correct credentials.  If you have a problem please contact us.</p>
