--- a/Views/Home/Order.cshtml
+++ b/Views/Home/Order.cshtml
@@ -37,7 +37,8 @@
 		 	<div id="user-details-content"></div>
 		 </div>
 		 
-		 
+	<!------Payment Section------->
+	<!------This section has the link to the paypal sandbox, as other payment methods are introduced it will appear below ------->	 
 		 
 		 
 <form id="paypal-form" action="" method="post">
@@ -56,8 +57,5 @@
 
 </div>
 
-<!-- <footer id="site-info">
-		Copyright &copy; 
-	</footer> -->
 
 </body>
