--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
+<!------Section directed from footer - indicates Privacy Policy ------->
+<!------Needs to be updated as legal conditions change ------->
 
 <p>The purpose of this Privacy Policy is to set out how, why and when Shopalot Online (RF) (Pty) Ltd t/a Shopalot.com (“Takealot”) uses your Personal Information so as to comply with the  Protection of Personal Information Act 4 of 2013 (“POPI”).
 
@@ -11,7 +13,7 @@ It is important that you read this Privacy Policy together with our other terms 
 
 Further, please pay special attention to the clauses in this Privacy Policy that appear in similar text and style (i.e. bold) which:
 
-may limit the risk or liability of Takealot or a third party.
+may limit the risk or liability of Shopalot or a third party.
 may create risk or liability for the user.
 may compel the user to indemnify Takealot or a third party.
 serves as an acknowledgement, by the user, of a fact.
