--- a/Views/Home/Product.cshtml
+++ b/Views/Home/Product.cshtml
@@ -1,6 +1,8 @@
 @{
     ViewData["Title"] = "Product";
 }
+<!------Section - View and browse all products ------->
+
 <div class="slider">
             <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
@@ -89,7 +91,7 @@
                                     </div>
                                 </div>
                             </div>
-
+<!------Initiate quantity of items to be added of product to cart ------->
  
 
                         <div class="col-md-3" data-item="Mens">
