--- a/Views/Home/Shipping.cshtml
+++ b/Views/Home/Shipping.cshtml
@@ -3,7 +3,8 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-
+<!------Section about shipping and delivery directed from footer ------->
+<!------Will need to be updated as business rules change ------->
  <section id="about">
             <div class="container">
                 <div class="row">
