--- a/Views/Home/Checkout.cshtml
+++ b/Views/Home/Checkout.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "CheckOut Page";
 }
 <title>Checkout</title>
-	
+	<!------Checkout Section------->
+			<!------This section captures the customer address and shipping details in a form also aided by javascript file ------->	
 
     <body id="checkout-page">
 
@@ -35,6 +36,7 @@
             <form action="order.html" method="post" id="checkout-order-form">
                 <h2>Your Details</h2>
                 <div id="shipping-same">Same as Billing <input type="checkbox" id="same-as-billing" value="" />
+                <!------In order to prevent the customer from retyping their address details there is an option of indicating it is the same, then form removed  ------->
                 </div>
                 <div class="checkout-page">
                     <fieldset id="fieldset-billing" style="float:left">
@@ -65,6 +67,7 @@
                                 data-message="This field cannot be empty" style="width: 400px;" />
                         </div>
                         <div>
+                            <!------As the business expands one can add drop downs for additional countries in Southern Africa ------->
                             <label for="country">Country</label>
                             <select name="country" id="country" data-type="string"
                                 data-message="This field cannot be empty">
@@ -74,7 +77,7 @@
                             </select>
                         </div>
                     </fieldset>
-
+<!------Important to denote that shipping and billing address may differ ------->
                     <fieldset id="fieldset-shipping" style="float:left">
 
                         <legend>Shipping</legend>
@@ -111,6 +114,7 @@
                                 <option value="">Select</option>
                                 <option value="De">South Africa</option>
                                 <option value="ZM">Zimbabwe</option>
+                                
                             </select>
                         </div>
                     </fieldset>
