--- a/Views/Home/FAQ.cshtml
+++ b/Views/Home/FAQ.cshtml
@@ -1,6 +1,8 @@
 @{
     ViewData["Title"] = "Frequently Asked Questions";
 }
+<!------Section Frequently Asked Questions ------->
+<!------Note needs to be updated as business rules and policies change ------->
 <h1>@ViewData["Title"]</h1>
 
  <section id="about">
