--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -1,51 +1,4 @@
-@* @{
-    ViewData["Title"] = "Login";
-}
-@model loginModel
-<div class="text-center">
-    <h1 class="display-4">Login</h1>
-   
-<div class="jumbotron">  
-    <strong>ASP.NET MVC</strong>   
-</div>  
-
-<form action="Login" method="post">
-    <table>
-        
-        <tr>
-            <td>Email: </td>
-            <td><input type="text" name="email" /></td>
-        </tr>
-        <tr>
-            <td>Password: </td>
-            <td><input type="text" name="Password" /></td>
-        </tr>
-        <tr>
-            <td colspan="2"><input type="submit" value="Submit Form" /></td>
-        </tr>
-    </table>
-</form>
-
-<table cellpadding="0" cellspacing="0">
-
-    <tr>
-        <th>Email</th>
-        
-        <th>Password</th>
-    </tr>        
-    @if(@Model!=null)
-    {
-        <tr>
-            <td>@Model.email</td>
-            <td>@Model.password</td>
-        </tr>
-        <tr>
-            <td><p>&nbsp&nbsp Your Password is successfully authenticated.</p></td>
-        </tr>
-    }
-
-</table>  *@
-
+<!------Login page to enter details for purchase ------->
 <form action="Login" method="post">
 
 <table>
@@ -77,7 +30,7 @@
 </table>
 
 </form>
-@* use this as well later! *@
+@*----------For creation of box and padding------*@
 <table cellpadding="0" cellspacing="0">
 
     <tr>
@@ -103,7 +56,7 @@
         </tr>
 
         <tr>
-
+<!------Defines below error message to display if email and password do not match registered details in database ------->
             <td><p>&nbsp&nbsp Your email or password login credentials are not correct - please try again</p></td>
 
         </tr>
